--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -52,21 +52,24 @@
                         <img src="imagens/beleza.jpeg" alt="">
                     </div>
                     <h5>Bem-estar</h5>
-                    <p>Estar bem com nós mesmos faz toda a diferença. Aproveite nossos tratamentos para ter um momento de auto-cuidado e aumentar a sua auto-estima</p>
+                    <p>Estar bem com nós mesmos faz toda a diferença. Aproveite nossos tratamentos para ter um momento
+                        de auto-cuidado e aumentar a sua auto-estima</p>
                 </div>
                 <div>
                     <div>
                         <img src="imagens/bem-estar.jpeg" alt="">
                     </div>
                     <h5>Renovação</h5>
-                    <p>Você merece relaxar. Confira as nossas opções de massagens que vão fazer você renovar as energias e esquecer do estresse do dia-a-dia</p>
+                    <p>Você merece relaxar. Confira as nossas opções de massagens que vão fazer você renovar as energias
+                        e esquecer do estresse do dia-a-dia</p>
                 </div>
                 <div>
                     <div>
                         <img src="imagens/descanso.jpeg" alt="">
                     </div>
                     <h5>Massagem</h5>
-                    <p>Se você precisa de um dia especial para cuidar de você, preparamos opções que promovem uma renovação completa. Confira nossos dias especiais, banhos e tratamentos holísticos. </p>
+                    <p>Se você precisa de um dia especial para cuidar de você, preparamos opções que promovem uma
+                        renovação completa. Confira nossos dias especiais, banhos e tratamentos holísticos. </p>
                 </div>
             </div>
         </section>
@@ -90,7 +93,8 @@
             <div>
                 <h3>É sobre bem estar</h3>
                 <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
-                <p>Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA para a sua casa. Confira nossas opções de sabonetes, sais de banho e velas para presentear você mesmo ou quem você ama. </p>
+                <p>Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA para a sua casa. Confira nossas
+                    opções de sabonetes, sais de banho e velas para presentear você mesmo ou quem você ama. </p>
             </div>
         </section>
     </main>
