adiciona id de serviço

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
     </header>
     <main>
-      <section id="servico">
+      <section id="servicos">
         <h3>O que oferecemos</h3>
         <h4>Uma ampla diversidade de serviços com alto padrão de qualidade</h4>
         <div class="cards">
