add link para servicos

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <nav>
         <ul>
           <li>
-            <a href="">Serviços</a>
+            <a href="#servicos">Serviços</a>
           </li>
           <li>
-            <a href="">Curiosidades</a>
+            <a href="#curiosidades">Curiosidades</a>
           </li>
           <li>
-            <a href="">Nosso espaço</a>
+            <a href="#nossoespaco">Nosso espaço</a>
           </li>
         </ul>
       </nav>
