--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="cupom">
         <div>
           <h2>
             <i class="fas fa-gift"></i> Inscreva-se para ganhar descontos!
