--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         </div>
       </section>
       <section id="cupom">
-        <div>
+        <div class="texto">
           <h2>
             <i class="fas fa-gift"></i> Inscreva-se para ganhar descontos!
           </h2>
         </div>
-        <div>
+        <div class="inscricao">
           <form action="">
-            <div>
+            <div class="input">
               <input type="email" />
             </div>
             <button>enviar!</button>
