--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="input">
             <input type="email" />
           </div>
-          <button>enviar!</button>
+          <button>enviar</button>
         </form>
       </div>
     </section>
