ajuste tamanho das fontes e add curiosidades

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         </form>
       </div>
     </section>
-    <section>
-      <div>
+    <section id="curiosidades">
+      
         <img src="imagens/pedra-e-flor.jpeg" alt="" />
-      </div>
+      
       <div>
         <h3>É sobre bem estar</h3>
         <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
