alteracao dos testos

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
           </div>
           <h5>Bem-estar</h5>
           <p>
-            Estar bem com nós mesmos faz toda a diferença. Aproveite nossos
-            tratamentos para ter um momento de auto-cuidado e aumentar a sua
-            auto-estima
+             Aproveite nossos tratamentos para ter um momento de auto-cuidado e aumentar a sua
+            auto-estima.
           </p>
         </div>
         <div class="card">
@@ -62,8 +61,9 @@
           </div>
           <h5>Renovação</h5>
           <p>
-            Você merece relaxar. Confira as nossas opções de massagens que vão
-            fazer você renovar as energias e esquecer do estresse do dia-a-dia
+            Preparamos opções que promovem uma renovação completa. Confira nossos dias
+            especiais, banhos e tratamentos holísticos.
+
           </p>
         </div>
         <div class="card">
@@ -72,9 +72,8 @@
           </div>
           <h5>Massagem</h5>
           <p>
-            Se você precisa de um dia especial para cuidar de você, preparamos
-            opções que promovem uma renovação completa. Confira nossos dias
-            especiais, banhos e tratamentos holísticos.
+            Você merece relaxar. Confira as nossas opções de massagens que vão
+            fazer você renovar as energias e esquecer do estresse do dia-a-dia.
           </p>
         </div>
       </div>
@@ -95,9 +94,9 @@
       </div>
     </section>
     <section id="curiosidades">
-      
-        <img src="imagens/pedra-e-flor.jpeg" alt="" />
-      
+
+      <img src="imagens/pedra-e-flor.jpeg" alt="" />
+
       <div>
         <h3>É sobre bem estar</h3>
         <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
