--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="#servicos">Serviços</a>
         </li>
         <li>
-          <a href="#curiosidades">Curiosidades</a>
+          <a href="#produtos">Produtos</a>
         </li>
         <li>
           <a href="#nossoespaco">Nosso espaço</a>
@@ -51,13 +51,13 @@
           </div>
           <h5>Bem-estar</h5>
           <p>
-             Aproveite nossos tratamentos para ter um momento de auto-cuidado e aumentar a sua
+            Aproveite nossos tratamentos para ter um momento de auto-cuidado e aumentar a sua
             auto-estima.
           </p>
         </div>
         <div class="card">
           <div class="img-container">
-            <img src="imagens/bem-estar.jpeg" alt="" />
+            <img src="imagens/renovacao.jpg" alt="" />
           </div>
           <h5>Renovação</h5>
           <p>
@@ -68,7 +68,7 @@
         </div>
         <div class="card">
           <div class="img-container">
-            <img src="imagens/descanso.jpeg" alt="" />
+            <img src="imagens/massagem.jpg" alt="massagem" />
           </div>
           <h5>Massagem</h5>
           <p>
@@ -76,6 +76,22 @@
             fazer você renovar as energias e esquecer do estresse do dia-a-dia.
           </p>
         </div>
+      </div>
+    </section>
+    <section id="produtos">
+      <h3>É sobre bem estar</h3>
+        <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
+        <p>
+          Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA
+          para a sua casa. Confira nossas opções de sabonetes, sais de banho e
+          velas para presentear você mesmo ou quem você ama.
+        </p>
+      <div class="produto-container">
+        <img src="imagens/spa_products.jpg" alt="produtos spa" />
+      </div>
+      <div>
+        
+      
       </div>
     </section>
     <section id="cupom">
@@ -93,20 +109,7 @@
         </form>
       </div>
     </section>
-    <section id="curiosidades">
-
-      <img src="imagens/pedra-e-flor.jpeg" alt="" />
-
-      <div>
-        <h3>É sobre bem estar</h3>
-        <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
-        <p>
-          Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA
-          para a sua casa. Confira nossas opções de sabonetes, sais de banho e
-          velas para presentear você mesmo ou quem você ama.
-        </p>
-      </div>
-    </section>
+   
   </main>
   <footer>Estilizado com Sass e com <i class="fas fa-heart"></i></footer>
 </body>
