--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alura SPA</title>
+  <title>SPA NATURAL</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap"
@@ -38,7 +38,7 @@
     </nav>
     <section class="banner">
       <div class="inner-banner">
-        <h1>Alura SPA</h1>
+        <h1>NATURAL SPA</h1>
         <h2>Venha viver o seu melhor dia!</h2>
       </div>
     </section>
@@ -46,11 +46,13 @@
   <main>
     <section id="servicos">
       <h4>O que oferecemos</h4>
-      <h3>Uma ampla diversidade de serviços com alto padrão de qualidade</h3>
+      <h3>Uma experiência única que alia relaxamento, cuidados corporais e clareza mental
+        aliados a natureza
+      </h3>
       <div class="cards">
         <div class="card">
           <div class="img-container">
-            <img src="imagens/beleza.jpeg" alt="" />
+            <img src="imagens/beleza.jpg" alt="" />
           </div>
           <h5>Bem-estar</h5>
           <p>
@@ -89,22 +91,48 @@
         para a sua casa. Confira nossas opções de sabonetes, sais de banho e
         velas para presentear você mesmo ou quem você ama.
       </p>
-      <div class="produto-container">
 
-        <div>
-          <img src="/imagens/interior-1.jpeg" />
+      <div class="swipper">
+       <!--  Slides -->
+        <div class="slides">
+          <input type="radio" name="radio-btn" id="radio1">
+          <input type="radio" name="radio-btn" id="radio2">
+          <input type="radio" name="radio-btn" id="radio3">
+          <input type="radio" name="radio-btn" id="radio4">
+          <!--  Slides -->
+
+          <!-- Imagens -->
+          <div class="slide first">
+            <img src="/imagens/interior-1.jpeg" />
+          </div>
+          <div class="slide second">
+            <img src="/imagens/interior-2.jpeg" />
+          </div>
+          <div class="slide third">
+            <img src="/imagens/interior-3.jpeg" />
+          </div>
+          <div class="slide quatro">
+            <img src="/imagens/interior-3.jpeg" />
+          </div>
         </div>
-        <div>
-          <img src="/imagens/interior-2.jpeg" />
+        <!-- Imagens -->
+        <!-- Navegação -->
+        <div class="navigation-auto">
+          <div class="auto-btn1"></div>
+          <div class="auto-btn2"></div>
+          <div class="auto-btn3"></div>
+          <div class="auto-btn4"></div>
         </div>
-        <div>
-          <img src="/imagens/interior-3.jpeg" />
+
+        <div class="manual-navigation">
+          <label for="radio1" class="manual-btn"></label>
+          <label for="radio2" class="manual-btn"></label>
+          <label for="radio3" class="manual-btn"></label>
+          <label for="radio4" class="manual-btn"></label>
         </div>
       </div>
-      
 
 
-      
     </section>
     <section id="cupom">
       <div class="texto">
@@ -124,9 +152,7 @@
 
   </main>
   <footer>Estilizado com Sass e com <i class="fas fa-heart"></i></footer>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  
   <script src="./main.js"></script>
 </body>
 
