--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </p>
 
       <div class="swipper">
-       <!--  Slides -->
+        <!--  Slides -->
         <div class="slides">
           <input type="radio" name="radio-btn" id="radio1">
           <input type="radio" name="radio-btn" id="radio2">
@@ -103,32 +103,33 @@
 
           <!-- Imagens -->
           <div class="slide first">
-            <img src="/imagens/interior-1.jpeg" />
+            <img src="/imagens/produto-1.jpg" />
           </div>
           <div class="slide second">
-            <img src="/imagens/interior-2.jpeg" />
+            <img src="/imagens/produto-2.jpg" />
           </div>
           <div class="slide third">
-            <img src="/imagens/interior-3.jpeg" />
+            <img src="/imagens/produto-3.jpg" />
           </div>
           <div class="slide quatro">
             <img src="/imagens/interior-3.jpeg" />
           </div>
-        </div>
-        <!-- Imagens -->
-        <!-- Navegação -->
-        <div class="navigation-auto">
-          <div class="auto-btn1"></div>
-          <div class="auto-btn2"></div>
-          <div class="auto-btn3"></div>
-          <div class="auto-btn4"></div>
-        </div>
 
-        <div class="manual-navigation">
-          <label for="radio1" class="manual-btn"></label>
-          <label for="radio2" class="manual-btn"></label>
-          <label for="radio3" class="manual-btn"></label>
-          <label for="radio4" class="manual-btn"></label>
+          <!-- Imagens -->
+          <!-- Navegação -->
+          <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
+            <div class="auto-btn4"></div>
+          </div>
+
+          <div class="manual-navigation">
+            <label for="radio1" class="manual-btn"></label>
+            <label for="radio2" class="manual-btn"></label>
+            <label for="radio3" class="manual-btn"></label>
+            <label for="radio4" class="manual-btn"></label>
+          </div>
         </div>
       </div>
 
@@ -152,7 +153,7 @@
 
   </main>
   <footer>Estilizado com Sass e com <i class="fas fa-heart"></i></footer>
-  
+
   <script src="./main.js"></script>
 </body>
 
