--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Glider.js -->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide">
+  
 
   <link rel="stylesheet" href="/styles/styles.css" />
 
@@ -132,10 +132,8 @@
   </main>
   <footer>Estilizado com Sass</footer>
 
-
-  <script>
-    new Glide('.images', {}).mount();
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+  <script src="/js/mains.js"></script>
 
 </body>
 
