--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Glider.js -->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
-  
+
 
   <link rel="stylesheet" href="/styles/styles.css" />
 
@@ -96,20 +96,31 @@
         velas para presentear você mesmo ou quem você ama.
       </p>
 
-      <div class="images">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide"><img src="/imagens/produto-1.jpg" /></li>
-            <li class="glide__slide"><img src="/imagens/produto-2.jpg" /></li>
-            <li class="glide__slide"><img src="/imagens/produto-3.jpg" /></li>
-          </ul>
+      <div class="carousel">
+        <div class="carousel__container">
+          <button aria-label="Anterior" class="carousel__anterior"></button>
+
+          <div class="carousel__lista">
+            <div class="caroulsel__elemento">
+              <img src="/imagens/produto-1.jpg" />
+              <p>Lorem, ipsum.</p>
+            </div>
+            <div class="caroulsel__elemento">
+              <img src="/imagens/produto-2.jpg" />
+              <p>Lorem, ipsum.</p>
+
+            </div>
+            <div class="caroulsel__elemento">
+              <img src="/imagens/produto-3.jpg" />
+              <p>Lorem, ipsum.</p>
+
+            </div>
+          </div>
+          <button aria-label="Proximo" class="carousel__proximo"></button>
         </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
-          <button class="glide__bullet" data-glide-dir="=2"></button>
-        </div>
+        <div role="tablist" class="caroulsel__indicadores"></div>
       </div>
+      
 
 
     </section>
