--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
           velas para presentear você mesmo ou quem você ama.
         </p>
 
-        <div class="splider">
-          <div class="slides">
-            <input type="radio" name="radio-btn" id="radio-1" />
-            <input type="radio" name="radio-btn" id="radio-2" />
-            <input type="radio" name="radio-btn" id="radio-3" />
-            <div class="slide-first">
+        <div class="img-slider">
+          <div class="slide">
               <img src="/imagens/produto-1.jpg" />
+              <div class="info">
               <p>Lorem, ipsum.</p>
+              </div>
             </div>
-            <div class="slide-second">
               <img src="/imagens/produto-2.jpg" />
+              <div class="info">
               <p>Lorem, ipsum.</p>
+              </div>
             </div>
-            <div class="slide-third">
               <img src="/imagens/produto-3.jpg" />
+              <div class="info">
               <p>Lorem, ipsum.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
     </main>
     <footer>Estilizado com Sass</footer>
 
-    <script src="/js/splide.min.js"></script>
+   
     <script src="/js/main.js"></script>
   </body>
 </html>
