--- a/index.html
+++ b/index.html
@@ -102,26 +102,27 @@
           velas para presentear você mesmo ou quem você ama.
         </p>
 
-        <div class="img-slider">
-          <div class="slide">
-              <img src="/imagens/produto-1.jpg" />
-              <div class="info">
+       <div class="slider">
+        <div class="slide">
+          <img class="produtoImagem" src="/imagens/produto-1.jpg" />
+            <div class="info-1">
+              <h2>Slide 01</h2>
               <p>Lorem, ipsum.</p>
-              </div>
             </div>
-              <img src="/imagens/produto-2.jpg" />
-              <div class="info">
+          <img class="produtoImagem"src="/imagens/produto-2.jpg" />
+            <h2>Slide 02</h2>
+            <div class="info-2">
               <p>Lorem, ipsum.</p>
-              </div>
             </div>
-              <img src="/imagens/produto-3.jpg" />
-              <div class="info">
+          <img class="produtoImagem"src="/imagens/produto-3.jpg" />
+            <div class="info-3">
+              <h2>Slide 03</h2>
               <p>Lorem, ipsum.</p>
-              </div>
             </div>
-          </div>
+
         </div>
-      </section>
+       </div>
+
       <section id="cupom">
         <div class="texto">
           <h2><i class="fas fa-gift"></i> Inscreva-se e ganhe descontos!</h2>
