--- a/index.html
+++ b/index.html
@@ -113,45 +113,51 @@
           para a sua casa. Confira nossas opções de sabonetes, sais de banho e
           velas para presentear você mesmo ou quem você ama.
         </p>
-
-       <div class="slider">
-        <div class="slide">
-          <img class="produtoImagem" src="/imagens/produto-1.jpg" />
-            <div class="info-1">
-              <h2>Slide 01</h2>
-              <p>Lorem, ipsum.</p>
+        <div class="img-slider-wrapper">
+          <div class="img-slider">
+            <div class="slide">
+              <img src="/imagens/produto-1.jpg" />
+              <div class="info">
+                <h2>Slide 01</h2>
+                <p>Lorem, ipsum.</p>
+              </div>
             </div>
-          <img class="produtoImagem"src="/imagens/produto-2.jpg" />
-            <h2>Slide 02</h2>
-            <div class="info-2">
-              <p>Lorem, ipsum.</p>
+            <div class="slide">
+              <img src="/imagens/produto-2.jpg" />
+              <div class="info">
+                <h2>Slide 02</h2>
+                <p>Lorem, ipsum.</p>
+              </div>
             </div>
-          <img class="produtoImagem"src="/imagens/produto-3.jpg" />
-            <div class="info-3">
-              <h2>Slide 03</h2>
-              <p>Lorem, ipsum.</p>
+            <div class="slide">
+              <img src="/imagens/produto-3.jpg" />
+              <div class="info">
+                <h2>Slide 03</h2>
+                <p>Lorem, ipsum.</p>
+              </div>
             </div>
-
+          </div>
         </div>
-       </div>
+        </div>
 
-      <section id="cupom">
-        <div class="texto">
-          <h2><i class="fas fa-gift"></i> Inscreva-se e ganhe descontos!</h2>
-        </div>
-        <div class="inscricao">
-          <form action="">
-            <div class="input">
-              <input type="email" />
-            </div>
-            <button>enviar</button>
-          </form>
-        </div>
-      </section>
+        <section id="cupom">
+          <div class="texto">
+            <h2><i class="fas fa-gift"></i> Inscreva-se e ganhe descontos!</h2>
+          </div>
+          <div class="inscricao">
+            <form action="">
+              <div class="input">
+                <input type="email" />
+              </div>
+              <button>enviar</button>
+            </form>
+          </div>
+        </section>
     </main>
     <footer>Estilizado com Sass</footer>
 
-   
+
     <script src="/js/main.js"></script>
-  </body>
+</body>
+
 </html>
