--- a/index.html
+++ b/index.html
@@ -109,14 +109,23 @@
             <div class="info">
               <h2>Slide 02</h2>
               <p>Lorem, ipsum.</p>
+              <div class="button">
+                <button>Mais detalhes</button>
+              </div>
             </div>
           </div>
           <div class="slide">
             <img src="/imagens/produto-3.jpg" />
             <div class="info">
-              <h2>Slide 03</h2>
-              <p>Lorem, ipsum.</p>
+              <h2>rolinho</h2>
+              <p class="slide-p">Lorem, ipsum.</p>
             </div>
+          </div>
+          <div class="navigation">
+            <div class="btn"></div>
+            <div class="btn"></div>
+            <div class="btn"></div>
+
           </div>
         </div>
       </div>
@@ -135,6 +144,7 @@
           </form>
         </div>
       </section>
+    </section>
   </main>
   <footer>Estilizado com Sass</footer>
 
