--- a/index.html
+++ b/index.html
@@ -90,32 +90,36 @@
     <section id="produtos">
       <h3>É sobre bem estar</h3>
       <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
-      <p>
+      <p class="produto-p">
         Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA
-        para a sua casa. Confira nossas opções de sabonetes, sais de banho e
-        velas para presentear você mesmo ou quem você ama.
+        para a sua casa. 
+        <p class="produto-p">Confira nossas opções de sabonetes, sais de banho e
+        velas para presentear você mesmo ou quem você ama.</p>
       </p>
       <div class="img-slider-wrapper">
         <div class="img-slider">
           <div class="slide">
-            <img src="/imagens/produto-1.jpg" />
+            <img  class="produtoImagem"
+            src="/imagens/produto-1.jpg" />
             <div class="info">
               <h2>Slide 01</h2>
-              <p>Lorem, ipsum.</p>
+              <p class="slide-p">Lorem, ipsum.</p>
             </div>
           </div>
           <div class="slide">
-            <img src="/imagens/produto-2.jpg" />
+            <img  class="produtoImagem"
+            src="/imagens/produto-2.jpg" />
             <div class="info">
               <h2>Slide 02</h2>
-              <p>Lorem, ipsum.</p>
+              <p class="slide-p">Lorem, ipsum.</p>
               <div class="button">
                 <button>Mais detalhes</button>
               </div>
             </div>
           </div>
           <div class="slide">
-            <img src="/imagens/produto-3.jpg" />
+            <img  class="produtoImagem"
+            src="/imagens/produto-3.jpg" />
             <div class="info">
               <h2>rolinho</h2>
               <p class="slide-p">Lorem, ipsum.</p>
