mudanças nos espaçamentos das sections

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <main>
     <section id="servicos">
       <h4>O que oferecemos</h4>
+      <hr>
       <h3>
         Uma experiência única que alia relaxamento, cuidados corporais e
         clareza mental aliados a natureza
@@ -89,10 +90,10 @@
     </section>
     <section id="produtos">
       <h3>É sobre bem estar</h3>
+      
       <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
       <p class="produto-p">
-        Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA
-        para a sua casa. 
+        Carregue com você o bem-estar, onde estiver. 
         <p class="produto-p">Confira nossas opções de sabonetes, sais de banho e
         velas para presentear você mesmo ou quem você ama.</p>
       </p>
@@ -103,7 +104,7 @@
             src="/imagens/produto-1.jpg" />
             <div class="info">
               <h2>Slide 01</h2>
-              <p class="slide-p">Lorem, ipsum.</p>
+              <p>Lorem, ipsum.</p>
             </div>
           </div>
           <div class="slide">
@@ -111,7 +112,7 @@
             src="/imagens/produto-2.jpg" />
             <div class="info">
               <h2>Slide 02</h2>
-              <p class="slide-p">Lorem, ipsum.</p>
+              <p>Lorem, ipsum.</p>
               <div class="button">
                 <button>Mais detalhes</button>
               </div>
@@ -122,7 +123,7 @@
             src="/imagens/produto-3.jpg" />
             <div class="info">
               <h2>rolinho</h2>
-              <p class="slide-p">Lorem, ipsum.</p>
+              <p>Lorem, ipsum.</p>
             </div>
           </div>
           <div class="navigation">
