reestilizaçao dos cards

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             Aproveite nossos tratamentos para ter um momento de auto-cuidado e
             aumentar a sua auto-estima.
           </p>
+          <button>Saiba mais</button>
         </div>
         <div class="card">
           <div class="img-container">
@@ -74,6 +75,7 @@
             Preparamos opções que promovem uma renovação completa. Confira
             nossos dias especiais, banhos e tratamentos holísticos.
           </p>
+          <button>Saiba mais</button>
         </div>
         <div class="card">
           <div class="img-container">
@@ -85,6 +87,8 @@
             fazer você renovar as energias e esquecer do estresse do
             dia-a-dia.
           </p>
+          <button>Saiba mais</button>
+          
         </div>
       </div>
     </section>
