--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <main>
     <section id="servicos">
-      <h4>O que oferecemos</h4>
+      <h4>Serviços</h4>
       <hr>
       <h3>
         Uma experiência única que alia relaxamento, cuidados corporais e
@@ -64,7 +64,7 @@
             Aproveite nossos tratamentos para ter um momento de auto-cuidado e
             aumentar a sua auto-estima.
           </p>
-          <button>Saiba mais</button>
+          <button class="btn-servico">Saiba mais</button>
         </div>
         <div class="card">
           <div class="img-container">
@@ -75,7 +75,7 @@
             Preparamos opções que promovem uma renovação completa. Confira
             nossos dias especiais, banhos e tratamentos holísticos.
           </p>
-          <button>Saiba mais</button>
+          <button class="btn-servico">Saiba mais</button>
         </div>
         <div class="card">
           <div class="img-container">
@@ -87,7 +87,7 @@
             fazer você renovar as energias e esquecer do estresse do
             dia-a-dia.
           </p>
-          <button>Saiba mais</button>
+          <button class="btn-servico">Saiba mais</button>
           
         </div>
       </div>
