add novo banner e responsividade

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <hr>
       <h3>
         Uma experiência única que alia relaxamento, cuidados corporais e
-        clareza mental aliados a natureza
+        clareza mental junto a natureza.
       </h3>
       <div class="cards">
         <div class="card">
