tamanhao das fontes

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       
       <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
       <p class="produto-p">
-        Carregue com você o bem-estar, onde estiver. 
+        Carregue com você o bem-estar, onde estiver.</p> 
         <p class="produto-p">Confira nossas opções de sabonetes, sais de banho e
         velas para presentear você mesmo ou quem você ama.</p>
       </p>
