--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="https://unpkg.com/phosphor-icons"></script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -88,53 +89,66 @@
             dia-a-dia.
           </p>
           <button class="btn-servico">Saiba mais</button>
-          
+
         </div>
       </div>
     </section>
     <section id="produtos">
       <h3>É sobre bem estar</h3>
-      
+
       <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
       <p class="produto-p">
-        Carregue com você o bem-estar, onde estiver.</p> 
-        <p class="produto-p">Confira nossas opções de sabonetes, sais de banho e
-        velas para presentear você mesmo ou quem você ama.</p>
+        Carregue com você o bem-estar, onde estiver.</p>
+      <p class="produto-p">Confira nossas opções de óleos essenciais, balsamos corporais e
+        sais de banho você mesmo ou quem você ama.</p>
       </p>
       <div class="img-slider-wrapper">
         <div class="img-slider">
           <div class="slide">
-            <img  class="produtoImagem"
-            src="/imagens/produto-1.jpg" />
+            <img class="produtoImagem" src="/imagens/produto-1.jpg" />
             <div class="info">
               <h2>Slide 01</h2>
               <p>Lorem, ipsum.</p>
-            </div>
-          </div>
-          <div class="slide">
-            <img  class="produtoImagem"
-            src="/imagens/produto-2.jpg" />
-            <div class="info">
-              <h2>Slide 02</h2>
-              <p>Lorem, ipsum.</p>
-              <div class="button">
-                <button>Mais detalhes</button>
+              <div class="btn-comprar">
+                <button  class="btn-comprar">Comprar</button>
               </div>
             </div>
           </div>
           <div class="slide">
-            <img  class="produtoImagem"
-            src="/imagens/produto-3.jpg" />
+            <img class="produtoImagem" src="/imagens/produto-2.jpg" />
             <div class="info">
-              <h2>rolinho</h2>
+              <h2>Slide 02</h2>
               <p>Lorem, ipsum.</p>
+              <div class="btn-comprar">
+                <button class="btn-comprar">Comprar</button>
+              </div>
             </div>
           </div>
-          <div class="navigation">
-            <div class="btn"></div>
-            <div class="btn"></div>
-            <div class="btn"></div>
+          <div class="slide">
+            <img class="produtoImagem" src="/imagens/produto-3.jpg" />
+            <div class="info">
+              <h2>Slide 03</h2>
+              <p>Lorem, ipsum.</p>
+              <div class="btn-comprar">
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
 
+          </div>
+          <div class="slide">
+            <img class="produtoImagem" src="/imagens/produto-4.jpg" />
+            <div class="info">
+              <h2>Slide 04</h2>
+              <p>Lorem, ipsum.</p>
+              <div >
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
+
+          </div>
+          <div class="navigation">
+            <i class="fas fa-chevron-left prev-btn"></i>
+            <i class="fas fa-chevron-right next-btn"></i>
           </div>
         </div>
       </div>
