inicio js consts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <script src="https://unpkg.com/phosphor-icons"></script>
+  <script src="https://kit.fontawesome.com/8f2ac59b5f.js" crossorigin="anonymous"></script>
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -110,7 +111,7 @@
               <h2>Slide 01</h2>
               <p>Lorem, ipsum.</p>
               <div class="btn-comprar">
-                <button  class="btn-comprar">Comprar</button>
+                <button class="btn-comprar">Comprar</button>
               </div>
             </div>
           </div>
@@ -140,15 +141,17 @@
             <div class="info">
               <h2>Slide 04</h2>
               <p>Lorem, ipsum.</p>
-              <div >
+              <div>
                 <button class="btn-comprar">Comprar</button>
               </div>
             </div>
 
           </div>
           <div class="navigation">
-            <i class="fas fa-chevron-left prev-btn"></i>
-            <i class="fas fa-chevron-right next-btn"></i>
+            <div class="flex">
+              <i class="fa-solid fa-chevron-left prev-btn"></i>
+              <i class="fa-solid fa-chevron-right next-btn"></i>
+            </div>
           </div>
         </div>
       </div>
