ajustes reponsividade mobile

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
   <main>
     <section id="servicos">
-      <h4>Serviços</h4>
-      <hr>
+      <h4>O QUE OFERECEMOS</h4>
+      <HR>
       <h3>
         Uma experiência única que alia relaxamento, cuidados corporais e
         clareza mental junto a natureza.
