--- a/index.html
+++ b/index.html
@@ -106,74 +106,57 @@
         sais de banho você mesmo ou quem você ama.</p>
       </p>
 
-      <div class="glide">
-        <div data-glide-el="track" class="glide__track">
-          <ul class="glide__slides">
-            <li class="glide__slide1"><img class="produtoImagem" src="/imagens/produto-1.jpg" /></li>
-            <li class="glide__slide2"><img class="produtoImagem" src="/imagens/produto-2.jpg" /></li>
-            <li class="glide__slide3"><img class="produtoImagem" src="/imagens/produto-3.jpg" /></li>
-          </ul>
-          <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide__bullet" data-glide-dir="=0"></button>
-            <button class="glide__bullet" data-glide-dir="=1"></button>
-            <button class="glide__bullet" data-glide-dir="=2"></button>
+
+
+      <div id="items-wrapper">
+        <div id="items">
+          <div class="item">
+            <img class="produtoImagem" src="/imagens/produto-1.jpg" />
+            <div class="info">
+              <h2>Slide 01</h2>
+              <p>Lorem, ipsum.</p>
+              <div class="btn-comprar">
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="produtoImagem" src="/imagens/produto-2.jpg" />
+            <div class="info">
+              <h2>Slide 02</h2>
+              <p>Lorem, ipsum.</p>
+              <div class="btn-comprar">
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="produtoImagem" src="/imagens/produto-3.jpg" />
+            <div class="info">
+              <h2>Slide 03</h2>
+              <p>Lorem, ipsum.</p>
+              <div class="btn-comprar">
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
+
+          </div>
+          <div class="item">
+            <img class="produtoImagem" src="/imagens/produto-4.jpg" />
+            <div class="info">
+              <h2>Slide 04</h2>
+              <p>Lorem, ipsum.</p>
+              <div>
+                <button class="btn-comprar">Comprar</button>
+              </div>
+            </div>
+
           </div>
         </div>
+
       </div>
 
-      <!-- <div class="img-slider js-carousel">
-        <div class="img-slider__slide">
-          <img class="produtoImagem" src="/imagens/produto-1.jpg" />
-          <div class="info">
-            <h2>Slide 01</h2>
-            <p>Lorem, ipsum.</p>
-            <div class="btn-comprar">
-              <button class="btn-comprar">Comprar</button>
-            </div>
-          </div>
-        </div>
-        <div class="img-slider__slide">
-          <img class="produtoImagem" src="/imagens/produto-2.jpg" />
-          <div class="info">
-            <h2>Slide 02</h2>
-            <p>Lorem, ipsum.</p>
-            <div class="btn-comprar">
-              <button class="btn-comprar">Comprar</button>
-            </div>
-          </div>
-        </div>
-        <div class="img-slider__slide">
-          <img class="produtoImagem" src="/imagens/produto-3.jpg" />
-          <div class="info">
-            <h2>Slide 03</h2>
-            <p>Lorem, ipsum.</p>
-            <div class="btn-comprar">
-              <button class="btn-comprar">Comprar</button>
-            </div>
-          </div>
 
-        </div>
-        <div class="img-slider__slide">
-          <img class="produtoImagem" src="/imagens/produto-4.jpg" />
-          <div class="info">
-            <h2>Slide 04</h2>
-            <p>Lorem, ipsum.</p>
-            <div>
-              <button class="btn-comprar">Comprar</button>
-            </div>
-          </div>
-
-        </div>
-        <div class="controls" data-glide-el="controls">
-          <button class="previous"><<</button>
-          <button class="next">>></button>
-        </div>
-        
-      </div>
-      </div>
-      </div>
-      </div>
- -->
       <section id="cupom">
         <div class="texto">
           <h2><i class="fas fa-gift"></i> Inscreva-se e ganhe descontos!</h2>
@@ -191,7 +174,7 @@
   </main>
   <footer>Estilizado com Sass</footer>
 
-  
+
   <script>
     import Glide, { Autoplay } from '@glidejs/glide/dist/glide.modular.esm'
 
