adiciona evento js

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
 
-
-  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
-  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
-
   <link rel="stylesheet" href="/styles/styles.css" />
 
 </head>
@@ -175,11 +171,7 @@
   <footer>Estilizado com Sass</footer>
 
 
-  <script>
-    import Glide, { Autoplay } from '@glidejs/glide/dist/glide.modular.esm'
-
-    new Glide('.glide').mount({ Autoplay })
-  </script>
+  <script src="/js/main.js"></script>
 
 </body>
 
