customizaçao info e slides

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="item">
             <img class="produtoImagem" src="/imagens/produto-1.jpg" />
             <div class="info">
-              <h2>Slide 01</h2>
+              <h2>Body Balm</h2>
               <p>Lorem, ipsum.</p>
               <div class="btn-comprar">
                 <button class="btn-comprar">Comprar</button>
