--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <h1>NATURAL SPA</h1>
         <h2>Venha viver o seu melhor dia!</h2>
       </div>
+     <!--  <button class="btn-confira">Confira nosso espaço</button> -->
     </section>
   </header>
 
